Revision history for SPVM

0.9111  2021-01-07
        [CHANGES]
        * Improve compile error message. 
          [Before]
          Can't locate Foo/Bar.spvm in @INC ...
          
          [After]
          Can't locate Foo/Bar.spvm to load Foo::Bar class in @INC ...

0.9110  2021-01-07
        [CHANGES]
        * Current class "cur->" is changed to "&"
          [Before]
          cur->sum(1, 2)
          
          [After]
          &sum(1, 2)

0.9109  2021-01-06
        [CHANGES]
        * SPVM is compiled as GNU99 instead of C99
          SPVM source codes is pure C99, but  is not pure C99.
          Some platforms can't compile SPVM.xs that contains perl.h as C99.

0.9108  2021-01-06
        [CHANGES]
        * SPVM::get_exception return SPVM::BlessedObject::String
        * SPVM::set_exception can receive a SPVM::BlessedObject::String object
        * SPVM::new_byte_array_from_string encode the string using utf8::encode instead of Encode::encode('UTF-8', ...)
        * Don't use hex floating point literal and %a specifier of sprintf
          because it seems that some compilers don't support this C99 syntax.
0.9107  2021-01-05
        [CHANGES]
        * Native API new_env call INIT blocks.
        * Add SPVM::Builder::Exe again. This is revert of 0.9019.

        [BUGS]
        * Fix string buffer memory allocate edge case bug.

0.9106  2021-01-04
        [BUGS]
        * Fix the memory blocks count in runtime environment.

0.9105  2021-01-03
        [CHANGES]
        * SPVM::get_memory_blocks_count and native api's get_memory_blocks_count return
          the count of memory blocks created by the runtime environment. This is revert of 0.9103

0.9104  2021-01-02
        [CHANGES]
        * SPVM gcc option is simplified. 

0.9103  2021-01-01
        [CHANGES]
        * Fix the bug that old string buffers of the compiler isn't freed when new memory is allocated.
        * SPVM::get_memory_blocks_count and native api's get_memory_blocks_count return